[gd_scene load_steps=16 format=3 uid="uid://cijn3awlw326g"]

[ext_resource type="Script" uid="uid://cvtkgcx4kogfx" path="res://menu/main_menu/main_menu.gd" id="1_4jpja"]
[ext_resource type="Texture2D" uid="uid://b1g0jap7hqmru" path="res://resources/gui/Background/Vector/Forest.svg" id="1_668nr"]
[ext_resource type="Texture2D" uid="uid://bp6i6uc51alk1" path="res://resources/gui/Logotype/Back.svg" id="2_l7skw"]
[ext_resource type="Texture2D" uid="uid://dxgj4sokbn4pt" path="res://resources/gui/Logotype/NameBack.svg" id="3_3akyb"]
[ext_resource type="Texture2D" uid="uid://3pf6vb4cgk4b" path="res://resources/gui/Background/Shadow.svg" id="3_hm5mw"]
[ext_resource type="Texture2D" uid="uid://csw16fcul4271" path="res://resources/gui/Button/Rect/Fill/Hover.svg" id="5_fetsq"]
[ext_resource type="Texture2D" uid="uid://d3krq18dyjv2p" path="res://resources/gui/Button/Rect/Fill/Default.svg" id="6_c5o44"]
[ext_resource type="AudioStream" uid="uid://cgn3aysbrwf67" path="res://resources/audio/sfx/leaves_and_table.wav" id="6_p4u5i"]
[ext_resource type="AudioStream" uid="uid://j4532a8scndd" path="res://resources/audio/sfx/medieval_madness_text.wav" id="7_60nal"]
[ext_resource type="AudioStream" uid="uid://dx8mete4qp2uw" path="res://resources/audio/music/main_menu.wav" id="8_yr2mu"]

[sub_resource type="Animation" id="Animation_kcc0g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/TableBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/Table:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/Title Label 1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Title Label 2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/Shadow:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../ClickableElements:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../LeavesAndTable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_rocvb"]
resource_name = "new_animation"
length = 6.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/TableBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/Table:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/Title Label 1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Title Label 2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/Shadow:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../ClickableElements:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../LeavesAndTable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 2.36,
"start_offset": 0.0,
"stream": ExtResource("6_p4u5i")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}],
"times": PackedFloat32Array(0, 1.5)
}
tracks/6/use_blend = true
tracks/7/type = "audio"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../MedievalLabel")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"clips": [{
"end_offset": 7.0,
"start_offset": 0.0,
"stream": ExtResource("7_60nal")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}],
"times": PackedFloat32Array(2.5, 3)
}
tracks/7/use_blend = true
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../MadnessLabel")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 7.0,
"start_offset": 0.0,
"stream": ExtResource("7_60nal")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}],
"times": PackedFloat32Array(3, 3.5)
}
tracks/8/use_blend = true
tracks/9/type = "audio"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../MusicPlayer")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"clips": [{
"end_offset": 107.962,
"start_offset": 0.0,
"stream": ExtResource("8_yr2mu")
}],
"times": PackedFloat32Array(3.5)
}
tracks/9/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7l7u"]
_data = {
&"RESET": SubResource("Animation_kcc0g"),
&"fade_in": SubResource("Animation_rocvb")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fj1fk"]
texture = ExtResource("5_fetsq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lhu6s"]
texture = ExtResource("6_c5o44")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4jpja")

[node name="CosmeticElements" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="CosmeticElements"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_668nr")

[node name="Shadow" type="TextureRect" parent="CosmeticElements/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_hm5mw")

[node name="TableBackground" type="TextureRect" parent="CosmeticElements/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.5
offset_top = 50.0
offset_right = 320.5
offset_bottom = 281.0
grow_horizontal = 2
size_flags_horizontal = 4
texture = ExtResource("2_l7skw")

[node name="Table" type="TextureRect" parent="CosmeticElements/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -209.5
offset_top = 80.0
offset_right = 209.5
offset_bottom = 221.0
grow_horizontal = 2
texture = ExtResource("3_3akyb")

[node name="Title Label 1" type="Label" parent="CosmeticElements/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.5
offset_top = 100.0
offset_right = 135.5
offset_bottom = 149.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Medieval"

[node name="Title Label 2" type="Label" parent="CosmeticElements/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.5
offset_top = 150.0
offset_right = 120.5
offset_bottom = 199.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Madness"

[node name="LoadingAnimation" type="AnimationPlayer" parent="CosmeticElements"]
libraries = {
"": SubResource("AnimationLibrary_f7l7u")
}

[node name="ClickableElements" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Play" type="Button" parent="ClickableElements"]
layout_mode = 0
offset_left = 536.0
offset_top = 256.0
offset_right = 740.0
offset_bottom = 348.0
theme_override_colors/font_color = Color(0.643137, 0.572549, 0.372549, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxTexture_fj1fk")
theme_override_styles/normal = SubResource("StyleBoxTexture_lhu6s")
text = "Play"
icon_alignment = 1

[node name="Settings" type="Button" parent="ClickableElements"]
layout_mode = 0
offset_left = 536.0
offset_top = 376.0
offset_right = 740.0
offset_bottom = 468.0
theme_override_colors/font_color = Color(0.643137, 0.572549, 0.372549, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxTexture_fj1fk")
theme_override_styles/normal = SubResource("StyleBoxTexture_lhu6s")
text = "Settings"
icon_alignment = 1

[node name="Exit" type="Button" parent="ClickableElements"]
layout_mode = 0
offset_left = 536.0
offset_top = 496.0
offset_right = 740.0
offset_bottom = 588.0
theme_override_colors/font_color = Color(0.643137, 0.572549, 0.372549, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxTexture_fj1fk")
theme_override_styles/normal = SubResource("StyleBoxTexture_lhu6s")
text = "Exit
"
icon_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="LeavesAndTable" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="MedievalLabel" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="MadnessLabel" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
